fix: attempt five to fix landing page content overflowing out of the video background

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,6 +26,12 @@ body {
 /* --------------- welcome / landing page --------------- */
 /* --- credits #?? (see README.md credits section) --- */
 
+#welcome-page-html,
+#welcome-page-body {
+  height: 100%;
+  overflow: hidden;
+}
+
 .showcase {
   height: 100vh;
   display: flex;
